<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <android.support.v7.widget.Toolbar
            android:id="@+id/newRoomToolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical">
                <android.support.v7.widget.CardView
                    android:id="@+id/newRoomInputCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="6dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp">
                        <EditText
                            android:id="@+id/newRoomNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/room_name"
                            android:layout_marginTop="5dp"/>

                        <android.support.v7.widget.AppCompatSpinner
                            android:id="@+id/newRoomCoursesSpinner"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <TextView
                    android:id="@+id/newRoomNoCourseText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_join_a_course_first"
                    android:gravity="center_horizontal"
                    android:layout_weight="0.80" />

                <android.support.v7.widget.CardView
                    android:id="@+id/newRoomResultsCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_margin="12dp">
                        <TextView
                            android:id="@+id/newRoomRoomsLabel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/existed_rooms" />

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/existedRoomsList"
                            android:layout_width="match_parent"
                            android:layout_height="350dp"
                            android:paddingTop="5dp"
                            android:paddingBottom="8dp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/newRoomCreateButton"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/create_room"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>