<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearOutgoingSharedChatCell"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/textViewOutgoingSharedTextTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="time"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:baselineAligned="false"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/linearLayoutOutgoingChatRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="3.67"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewOutgoingSharedTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:text="name" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/relativeLayoutOutgoingSharedRoomHolder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/cell_message_sent"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/imageViewChatRoom"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:clickable="false"
                        android:contentDescription="@string/chatMessageAccessibility"
                        android:src="@drawable/ic_people_white_24px" />


                    <LinearLayout
                        android:id="@+id/linearLayoutChatRoomTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/imageViewChatRoom"
                        android:layout_toRightOf="@id/imageViewChatRoom"
                        android:ellipsize="end"
                        android:maxLength="15"
                        android:orientation="vertical"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:ellipsize="end"
                            android:maxLength="15"
                            android:text="@string/ROOM"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textViewChatSharedRoomName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:text="@string/chooseItemPlaceholder"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </LinearLayout>

                </RelativeLayout>


                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageViewOutgoingSharedTextImage"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:clickable="false"
                    android:contentDescription="Group Photo"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/ic_person_black_24px" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
